release 1.1.5 (2010)

release 1.1.4 (2009-11)
- Fixed issue 232
  https://jersey.dev.java.net/issues/show_bug.cgi?id=232
  The characters '{' and '}' are percent encoded if a URI is built using
  UriBuilder.build and no template parameter values are given as input.
- Fixed issue 357
  https://jersey.dev.java.net/issues/show_bug.cgi?id=357
  The Apache HTTP client handler for the Client API will automatically
  release the connection if no response entity is present. Thus it is not
  necessary to call ClientResponse.close if the response has no entity.
  This avoids the client blocking when all the threads of the connection
  manager are utilized.
- Fixed issue 384
  https://jersey.dev.java.net/issues/show_bug.cgi?id=384
  Work around issue in the LW HTTP server:
    http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6886436
  for responses that return a 204 status code. This issue can manifest
  itself if, for example, a client invokes a POST method that returns 204
  then invokes a GET method. This may cause some clients to hang, specifically
  HttpURLConnection (browsers and the Apache HTTP client do not hang).
- Fixed issue 397
  https://jersey.dev.java.net/issues/show_bug.cgi?id=397
  Fixed issue for JSON/JAXB mapped marshalling that results in a stack
  overflow if the client aborts the connection when marshalling is in
  operation.
- Fixed issue 393
  https://jersey.dev.java.net/issues/show_bug.cgi?id=393
  Headers may be added to the multi-valued map returned from 
  Response.getMetadata().
- Fixed issue 391
  https://jersey.dev.java.net/issues/show_bug.cgi?id=390
  The Jersey servlet-layer catches a MappableContainerException and will
  rethrow the cause wrapped in a ServletException. This ensures that such
  mappable exceptions can be mapped by the Web application.
- Fixed issue 390
  https://jersey.dev.java.net/issues/show_bug.cgi?id=390
  A com.sun.jersey.api.container.MappableContainerException may be thrown